--- a/src/app/login-register/login-register.page.html
+++ b/src/app/login-register/login-register.page.html
@@ -5,7 +5,7 @@
   <div class="" style="width: 500px; margin: auto">
 
     <div class="card">
-      <!-- When Uses is Not Logged In -->
+      <!-- When User is Not Logged In -->
       <div class="card-body" *ngIf="!userLoggedIn">
         <div class="row">
           <div class="col-sm-12 text-center">
