--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -58,6 +58,7 @@
       </ion-title>
     </ion-card-header>
     <ion-card-content>
+      <!--
       <ion-list>
         <ion-item>
           <ion-label>Name</ion-label>
@@ -70,6 +71,16 @@
           <ion-label>WIP</ion-label>
         </ion-item>
       </ion-list>
+      -->
+      <h1>Planned Features</h1>
+      <ul>
+        <li>
+          List of Owned Warehouses
+        </li>
+        <li>
+          Ability to Transfer clone to warehouse to operate from that Control Room
+        </li>
+      </ul>
     </ion-card-content>
   </ion-card>
 
