--- a/src/app/warehouses/warehouse/warehouse.page.html
+++ b/src/app/warehouses/warehouse/warehouse.page.html
@@ -8,6 +8,19 @@
 
 <ion-content>
   <ion-card>
+    <ion-card-header>
+      <ion-card-title>Warehouse</ion-card-title>
+      <ion-card-subtitle>Planned Features</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ul>
+        <li>List Warehouse Inventory <ion-icon name="checkmark-outline"></ion-icon></li>
+        <li>If no Warehouse, build one </li>
+      </ul>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
     <ion-grid>
       <ion-row class="">
         <ion-col>Item</ion-col>
