--- a/src/app/businesses/business-creation/business-creation.page.html
+++ b/src/app/businesses/business-creation/business-creation.page.html
@@ -18,12 +18,12 @@
       <ion-item>
         <ion-label position="floating">Select Business Type</ion-label>
         <ion-select name="colony" [(ngModel)]="aNewBusiness.name">
-          <ion-select-option *ngFor="let businessType of ss.aStructures" [value]="businessType.id">{{businessType.displayName}}</ion-select-option>
+          <ion-select-option *ngFor="let businessType of ss.aDStructures" [value]="businessType.id">{{businessType.displayName}}</ion-select-option>
         </ion-select>
       </ion-item>
     </form>
 
-    <span *ngFor="let aStructure of ss.aStructures">
+    <span *ngFor="let aStructure of ss.aDStructures">
       <ion-card *ngIf="aStructure.name === aNewBusiness.name">
         <ion-card-header>
           <ion-card-title>{{aStructure.displayName}}</ion-card-title>
