Beta 1 Trade and Travel Warehouse, Ship, and Station Trade Ship Travel Colony Consumption and Production Chat Filter

--- a/src/app/chat-rooms/chat-rooms.page.html
+++ b/src/app/chat-rooms/chat-rooms.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Open Chat</ion-title>
+    <ion-title>Global Chat</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="scrollToBottomInit()">Scroll</ion-button>
     </ion-buttons>
