--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,12 +33,14 @@
 
             <span *ngIf="ss.activeServer && cs.characterFound">
               <ion-list-header>Welcome Captain {{cs.aCharacter.name}}</ion-list-header>
-              <ion-note>Server: {{ss.activeServer}}</ion-note>
-              <ion-note>Active Clone Location: {{cs.aLocation.aSolarBody.name}} in {{cs.aLocation.aSolarSystem.name}}</ion-note>
+              <ion-list-header>Server: {{ss.activeServer}}</ion-list-header>
+              <ion-list-header>Active Clone Location: {{cs.aLocation.aSolarBody.name}} in {{cs.aLocation.aSolarSystem.name}}</ion-list-header>
               <ion-note>
                 <ion-icon name="wallet-outline" style="display:block;"></ion-icon>
+                <!--
                 Pulsar Balance: {{cs.aCharacter.pulsars | number}} <ion-icon src="assets/icon/PulsarCreditIcon-3.svg"></ion-icon>
                 <br />
+                -->
                 Pulsar Balance: {{cs.aCharacter.pulsars | number}} <ion-icon src="assets/icon/PulsarCreditSymbol.svg"></ion-icon>
               </ion-note>
             </span>
@@ -70,10 +72,54 @@
       </ion-content>
 
       <ion-footer>
+        <ion-content>
+          <ion-grid>
+            <ion-row style="text-align: center;">
+              <ion-col>
+                <p>Welcome to the Universe Trader Beta One, Trade and Travel</p>
+                <p>Read all the details about the beta here: <a href="https://discord.gg/XBBYQ8txqS">Trade and Travel</a> </p>
+              </ion-col>
+            </ion-row>
+            <ion-row style="text-align: center;">
+              <ion-col>
+                <a href="https://www.subscribestar.com/webcrafthouse" target="_blank">
+                  <img src="../assets/images/ss_support_med_01.png" alt="" srcset="" style="max-width: 50%;">
+                </a>
+              </ion-col>
+              <!--
+              <ion-col>
+
+              </ion-col>
+              -->
+            </ion-row>
+            <ion-row style="text-align: center">
+              <ion-col>
+                <a href="" routerLink="/tos">Terms of Service</a>
+              </ion-col>
+              <ion-col>
+                <a href="https://universetrader.online/bug-report/" target="_blank">Bug Report</a>
+              </ion-col>
+            </ion-row>
+            <ion-row style="text-align: center">
+              <ion-col>
+                <a href="https://discord.gg/XBBYQ8txqS" target="_blank">
+                  <ion-icon name="logo-discord"></ion-icon>
+                </a>
+              </ion-col>
+            </ion-row>
+            <ion-row style="font-size: small; text-align: center">
+              <ion-col>
+                <p>
+                  Copyright &#169; 2022 Universe Trader | Space Sim Game | Game Version 1.0.0
+                </p>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-content>
         <ion-card style="margin: 0">
           <ion-card-header>
             <ion-card-title>
-              Beta 1
+              Beta One
             </ion-card-title>
             <ion-card-subtitle>Colony Trade and Travel</ion-card-subtitle>
           </ion-card-header>
@@ -81,59 +127,17 @@
             <ion-grid>
               <ion-row>
                 <ion-col>
-                  <p>Welcome to the Universe Trader Beta 1, -Trade and Travel-</p>
+                  <p>Welcome to the Universe Trader Beta One, -Trade and Travel-</p>
+                  <p>Read all the details about the beta here: <a href="https://discord.gg/XBBYQ8txqS">Trade and Travel</a> </p>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <p>In this beta the active features are:</p>
-                  <ul>
-                    <li>
-                      Ship travel
-                    </li>
-                    <li>
-                      Ship and Warehouse Trading with Colony and Station
-                    </li>
-                    <li>
-                      Colonies will consume and produce products based on their population
-                    </li>
-                  </ul>
+                  <a href="https://www.subscribestar.com/webcrafthouse" target="_blank">
+                    <img src="../assets/images/ss_support_med_01.png" alt="" srcset="">
+                  </a>
                 </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col>
-                  <p>If you run into any issues while playing, please use the link below to submit a bug report.</p>
-                  <p>If you have any suggestioins, please add them to our discord!</p>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-        <ion-card style="margin: 0">
-          <ion-card-header>
-            <ion-card-title style="text-align: center">
-              Support Future Development and Server Costs
-            </ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-grid>
-              <ion-row>
-                <ion-col>
-                  <ion-item>
-                    <ion-grid>
-                      <ion-row>
-                        <ion-col>
-                            <a href="https://www.subscribestar.com/webcrafthouse" target="_blank">
-                              <img src="../assets/images/ss_support_med_01.png" alt="" srcset="">
-                            </a>
-                        </ion-col>
-                        <ion-col>
-                            More options coming soon!
-                        </ion-col>
-                      </ion-row>
-                    </ion-grid>
-                  </ion-item>
-                </ion-col>
+                <ion-col></ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
@@ -148,6 +152,11 @@
                   <a href="https://discord.gg/XBBYQ8txqS" target="_blank">
                     <ion-icon name="logo-discord"></ion-icon>
                   </a>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  <p>Copyright &#169; 2022 Universe Trader | Space Sim Game | Game Version 1.0.0</p>
                 </ion-col>
               </ion-row>
             </ion-grid>
